# sota-robotics

./: .env.example  .gitignore  README.md
.github/workflows/: ingest.yml
db/: ATTRIBUTION.md
db/migrations/: 0001_extensions.sql  0002_core_tables.sql  0003_rls.sql  0004_seed_taxonomy.sql
docs/: 2026-06-16-sota-robotics-design.md
docs/plans/: 2026-06-16-01-data-backbone.md  2026-06-18-02-phase0-backfill.md  (+3 more)
ingest/: pyproject.toml
ingest/src/sota_ingest/: __init__.py  awesome_lists.py  backfill.py  db.py  eval_conditions.py  fetch.py  migrate.py  models.py  pwc_backfill.py  sota_extractor.py  spine.py  upsert.py
ingest/src/sota_ingest/agent/: __init__.py  batch.py  db.py  extractor.py  gate.py  prompts.py  skeptic.py
ingest/src/sota_ingest/sources/: __init__.py  arxiv_client.py  github_client.py  hf_client.py  spine.py
ingest/tests/: conftest.py  test_agent_batch.py  test_agent_db.py  test_agent_extractor.py  test_agent_gate.py  test_agent_prompts.py  test_agent_skeptic.py  test_arxiv_client.py  test_awesome_lists.py  test_backfill.py  test_db.py  test_eval_conditions.py  test_fetch.py  test_github_client.py  test_hf_client.py  test_migrate.py  test_models.py  test_pwc_backfill.py  test_sota_extractor.py  test_spine.py  test_upsert.py
ingest/tests/fixtures/: arxiv_cs_ro.atom  awesome_embodied_ai.md  awesome_vla.md  extractor_response.json  github_repos.json  hf_models.json  pwc_eval_table.json  pwc_robotics_tasks.json  skeptic_response.json
web/: .env.local.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+24 files in other folders)
