[project]
name = "sota-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jsikka", email = "jatinsikka30@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "supabase>=2.15.0",
]

[project.scripts]
sota-ingest = "sota_ingest:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
